fix spacing on media qry nic form

--- a/app/assets/stylesheets/lower_nav.css
+++ b/app/assets/stylesheets/lower_nav.css
@@ -77,7 +77,7 @@
   margin-left: 1.5em;
 }*/
 #nicotine_calc_hours{
-  margin-left: .5em;
+  margin-left: 1em;
 }
 
 #caffeine_calc_cups{
